[workspace]
resolver = "3"
members = [
    "diesel_json_path",
    "diesel_json_derive"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A description of your crate"
license = "MIT"
repository = "https://github.com/yasuomaidana/your-repo"
readme = "README.md"
keywords = ["diesel", "json", "postgresql"]
categories = ["database"]

[workspace.dependencies]
diesel = { version = "2.3.7", features = ["postgres"] }
serde_json = "1.0.149"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
diesel_json_derive = { path = "diesel_json_derive" }
