[workspace]
resolver = "3"
members = [
    "diesel_json_path",
    "diesel_json_path_derive"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["yasuomaidana"]
description = "Procedural macro for generating type-safe SQL expressions for accessing nested JSON fields in PostgreSQL with Diesel ORM"
license = "MIT"
repository = "https://github.com/yasuomaidana/diesel_json_path"
readme = "README.md"
keywords = ["diesel", "json", "postgresql"]
categories = ["database"]

[workspace.dependencies]
diesel = { version = "2.3.7", features = ["postgres"] }
serde_json = "1.0.149"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
diesel_json_path_derive = { path = "diesel_json_path_derive", version = "0.1.0" }
